create github pages

--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
   
 </head>
 <body>
-  <section class="mbr-section mbr-section-full" id="header1-1" data-rv-view="3" style="background-color: rgb(211, 223, 210);">
+  <section class="mbr-section mbr-section-full mbr-parallax-background" id="header1-1" data-rv-view="3" style="background-image: url(assets/images/mbr-786x1080.jpg);">
     <div class="mbr-table-cell">
         
         <div class="container">
             <div class="row">
                 <div class="col-md-8 col-md-offset-2 text-xs-center">
 
-                    <h1 class="mbr-section-title display-1">Rebecca Akkila</h1>
+                    <h1 class="mbr-section-title display-1"><strong>Rebecca Akkila</strong></h1>
                     <p class="lead">Hej och välkommen till mig webbsida. Jag är en 22-årig tjej som tycker om att skapa, skriva och reflektera. Därför tänkte jag skapa en plats som jag kan designa själv och använda till att spara och dela mina tankar på. Här finner ni både min blogg och vad jag erbjuder för tjänster.&nbsp;</p>
-                    <div class="mbr-buttons--center"><a class="btn btn-lg btn-secondary-outline" href="https://mobirise.com">Om mig</a> <a class="btn btn-lg btn-secondary-outline" href="https://mobirise.com">Blogg</a> <a class="btn btn-lg btn-secondary-outline" href="https://mobirise.com">Tjänster</a> </div>
+                    <div class="mbr-buttons--center"><a class="btn btn-lg btn-white-outline btn-white" href="https://mobirise.com">Om mig</a> <a class="btn btn-lg btn-white-outline btn-white" href="https://mobirise.com">Blogg</a> <a class="btn btn-lg btn-white-outline btn-white" href="https://mobirise.com">Tjänster</a> </div>
                 </div>
             </div>
         </div>
@@ -37,7 +37,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section-small" id="content4-0" data-rv-view="0" style="background-color: rgb(211, 223, 210); padding-top: 4.5rem; padding-bottom: 4.5rem;">
+<section class="mbr-section mbr-section-small" id="content4-0" data-rv-view="0" style="background-color: rgb(251, 242, 190); padding-top: 4.5rem; padding-bottom: 4.5rem;">
     
     <div class="container">
         <div class="row">
@@ -75,6 +75,7 @@
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/smooth-scroll/SmoothScroll.js"></script>
+  <script src="assets/jarallax/jarallax.js"></script>
   <script src="assets/puritym/js/script.js"></script>
   
   
