--- a/index.html
+++ b/index.html
@@ -1,26 +1,108 @@
-<html>
-  <head>
-    <title>Sample "Hello, World" Application</title>
-  </head>
-  <body bgcolor=white>
+<!DOCTYPE html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!-->
+<html class="no-js"> <!--<![endif]-->
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <table border="0" cellpadding="10">
-      <tr>
-        <td>
-          <img src="images/springsource.png">
-        </td>
-        <td>
-          <h1>Sample "Hello, World" Application</h1>
-        </td>
-      </tr>
-    </table>
+  <title>Projekt 2018 Dashboard</title>
+  <link rel="stylesheet" href="./static/lib/css//bootstrap.min.css">
+  <link rel="stylesheet" href="./static/lib/css/keen-dashboards.css">
+  <link rel="stylesheet" href="./static/css/main.css">
+  <link rel="stylesheet" href="./scrollist.css">
 
-    <p>This is the home page for the HelloWorld Web application. </p>
-    <p>To prove that they work, you can execute either of the following links:
-    <ul>
-      <li>To a <a href="hello.jsp">JSP page</a>.
-      <li>To a <a href="hello">servlet</a>.
-    </ul>
+</head>
+<body class="application">
+  <!--[if lt IE 7]>
+      <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+  <![endif]-->
+  <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="./">Projekt 2018 Dashboard</a>
+      </div>
+    </div>
+  </div>
+  
+  <div class="container-fluid">
+  
+      <!-- Graf -->
+      <div class="row">
+          <div class="col-sm-12">
+            <div class="chart-wrapper">
+              <div class="chart-title">
+                Chart
+              </div>
+              <div class="chart-stage">
+                <div id="chart"></div>
+              </div>
+            </div>
+          </div>
+      </div>
 
-  </body>
+    </div> <!-- contriner -->
+
+			
+	 <div class="flex-container">
+	   	<ul id="listan" style="list-style-type:none">
+			<input type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()">
+		</ul>
+		<div class="button_title">Sort lines:</div>
+		<button onclick="sortLines('A')">A</button> 
+		<button onclick="sortLines('B')">B</button> 
+		<button onclick="sortLines('C')">C</button> 
+		<button onclick="sortLines('D')">D</button> 
+		<button onclick="sortLines('E')">E</button> 
+		<button onclick="sortLines('F')">F</button> 
+		<button onclick="sortLines('G')">G</button> 
+		<button onclick="sortLines('H')">H</button> 
+		<button onclick="sortLines('I')">I</button> 
+		<button onclick="sortLines('J')">J</button> 
+		<button onclick="sortLines('K')">K</button> 
+		<button onclick="sortLines('L')">L</button> 
+		<button onclick="sortLines('M')">M</button> 
+		<button onclick="sortLines('N')">N</button> 
+		<button onclick="sortLines('O')">O</button> 
+		<button onclick="sortLines('P')">P</button> 
+		<button onclick="sortLines('Q')">Q</button> 
+		<button onclick="sortLines('R')">R</button> 
+		<button onclick="sortLines('S')">S</button> 
+		<button onclick="sortLines('T')">T</button> 
+		<button onclick="sortLines('U')">U</button> 
+		<button onclick="sortLines('V')">V</button> 
+		<button onclick="sortLines('W')">W</button> 
+		<button onclick="sortLines('X')">X</button> 
+		<button onclick="sortLines('Y')">Y</button>
+		<button onclick="sortLines('Z')">Z</button>
+		<button onclick="sortLines('Å')">Å</button>
+		<button onclick="sortLines('Ä')">Ä</button>
+		<button onclick="sortLines('Ö')">Ö</button>
+		
+		<div class="button_title">Show only:</div>
+		<button onclick="girlNames()">Girl names</button> 
+		<button onclick="boyNames()">Boy names</button> 
+	
+		</div>
+		
+		
+		
+	</div> 
+
+	
+  <script src="./static/lib/js/jquery.min.js"></script>
+  <script src="./static/lib/js/bootstrap.min.js"></script>
+  <script src="./static/lib/js/d3.min.js"></script>
+  <script src="./static/lib/js/queue.js" type='text/javascript'></script>
+  <script src="./static/lib/js/colorbrewer.js" type='text/javascript'></script>
+  <!-- Modules -->
+  <script src='./static/js/main.js' type='text/javascript'></script>
+   <script src="./static/js/pc.js" type='text/javascript'></script>
+   <script src="./graf.js" type='text/javascript'></script>
+
+</body>
 </html>
